<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.mobbile.paul.shrine.activity.SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_250sdp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_8sdp"
            android:transitionName="@string/transition_card"
            app:cardBackgroundColor="#F3EFE8"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/product_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="Settings"
                    android:textColor="#474243"
                    android:textSize="@dimen/_18sdp" />


                <TextView
                    android:id="@+id/product_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/product_title"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_12sdp"
                    android:text="Update your profile, manage app settings."
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="#474243"
                    android:textStyle="bold"
                    android:transitionName="@string/transition_subtitle" />


                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/product_image"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="@dimen/_150sdp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:scaleType="centerInside"
                    android:transitionName="@string/transition_image"
                    app:lottie_rawRes="@raw/settingslottie"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:hint="@string/full_name"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/email"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:enabled="false"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/companyLayout"
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/company"
            app:helperTextEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/companyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textAutoComplete" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/buttonsLayout"
            android:layout_width="match_parent"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:orientation="horizontal">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout_button"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_44sdp"
                android:layout_margin="@dimen/_4sdp"
                android:layout_weight="1"
                android:background="@drawable/ic_google_button"
                android:text="@string/logout"
                android:textColor="@color/colorBeigeDark" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.Shrine.Button"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_44sdp"
                android:layout_margin="@dimen/_4sdp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:layout_weight="1"
                android:background="@color/colorDarkShade"
                android:backgroundTint="@color/colorDarkShade"
                android:text="@string/save"
                android:textColor="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>