<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_20sdp"
    android:layout_marginEnd="@dimen/_20sdp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_30sdp"
        android:layout_gravity="center"
        android:src="@drawable/ic_acesvglogo_dark"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:gravity="start"
        android:text="@string/create_an_account"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="#000"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="This allows us to personalise your experience and requests"
        android:textAppearance="?attr/textAppearanceBody2"
        android:textColor="#474243" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameLayout"
        style="@style/Widget.Shrine.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/full_name"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailLayout"
        style="@style/Widget.Shrine.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordLayout"
        style="@style/Widget.Shrine.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/shr_hint_password"
        app:helperTextEnabled="true"

        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/companyLayout"
        style="@style/Widget.Shrine.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/company"
        app:helperTextEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/companyEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/buttonsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_16sdp"
        android:orientation="horizontal">


        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_44sdp"
            android:layout_margin="@dimen/_4sdp"
            android:layout_weight="1"
            android:background="@drawable/ic_google_button"
            android:text="@string/back"
            android:textColor="@color/colorDarkShade" />


        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/registerButtonLayout"
            android:layout_width="match_parent"
            android:animateLayoutChanges="true"
            android:layout_weight="1"
            android:layout_height="match_parent">


            <com.google.android.material.button.MaterialButton
                android:id="@+id/registerButton"
                style="@style/Widget.Shrine.Button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_44sdp"
                android:layout_margin="@dimen/_4sdp"
                android:layout_marginEnd="12dp"
                android:layout_marginRight="12dp"
                android:visibility="visible"
                android:background="@color/colorDarkShade"
                android:backgroundTint="@color/colorDarkShade"
                android:text="@string/register"
                android:textColor="@color/colorPrimary"
                tools:ignore="UnusedAttribute" />
            <ProgressBar
                android:id="@+id/progress_bar"
                android:visibility="gone"
                android:layout_width="@dimen/_22sdp"
                android:layout_height="@dimen/_22sdp"
                android:layout_centerInParent="true"/>
        </RelativeLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/termsPrivacyTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:gravity="center"
        android:textAppearance="?attr/textAppearanceCaption"
        android:textColor="#474243"
        android:textStyle="bold"
        tools:text="Enter your Ace digital account details for a personalised experience." />

</LinearLayout>