<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/shr_product_grid_spacing"
            android:layout_marginLeft="@dimen/shr_product_grid_spacing"
            android:layout_marginTop="@dimen/shr_product_grid_spacing"
            android:layout_marginBottom="20dp"
            android:text="@string/social_media_engagement"
            android:textAppearance="?attr/textAppearanceHeadline4"
            android:textColor="#000"
            android:textStyle="bold"
           />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.Shrine.TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/brand_info"
            app:helperText="We would love to know more about your brand">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/brandInfoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/shr_product_grid_spacing"
            android:layout_marginLeft="@dimen/shr_product_grid_spacing"
            android:layout_marginTop="@dimen/shr_product_grid_spacing"
            android:layout_marginBottom="10dp"
            android:text="What platform would you want us to manage"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="#000"
            android:textStyle="bold" />


        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:singleSelection="true"
            app:chipSpacing="8dp">

            <com.google.android.material.chip.Chip
                android:id="@+id/facebook_chip"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:chipBackgroundColor="@color/colorPrimary"

                app:chipIcon="@drawable/ic_facebook_icon" />

            <com.google.android.material.chip.Chip
                android:id="@+id/twitter_chip"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""

                app:chipBackgroundColor="@color/colorPrimary"
                app:chipIcon="@drawable/ic_twitter" />

            <com.google.android.material.chip.Chip
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:id="@+id/snapchat_chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:chipBackgroundColor="@color/colorPrimary"

                app:chipIcon="@drawable/ic_snapchat" />

            <com.google.android.material.chip.Chip
                android:id="@+id/instagram_chip"
                style="@style/Widget.MaterialComponents.Chip.Entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                app:chipBackgroundColor="@color/colorPrimary"
                app:chipIcon="@drawable/ic_instagram" />
        </com.google.android.material.chip.ChipGroup>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/shr_product_grid_spacing"
            android:layout_marginLeft="@dimen/shr_product_grid_spacing"
            android:layout_marginTop="@dimen/shr_product_grid_spacing"
            android:layout_marginBottom="10dp"
            android:text="I want to achieve"
            android:textAppearance="?attr/textAppearanceCaption"
            android:textColor="#000"
            android:textStyle="bold" />

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:chipSpacing="8dp"
            app:singleSelection="true">


            <com.google.android.material.chip.Chip
                android:id="@+id/pageIncreaseChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Page Increase" />

            <com.google.android.material.chip.Chip
                android:id="@+id/pageEngagementChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="Page Engagement" />
        </com.google.android.material.chip.ChipGroup>


        <RadioGroup
            android:id="@+id/pageIncreaseRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <RadioButton
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/build_up_to_1k_followers_in_3_months" />

            <RadioButton
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_up_to_5k_followers_in_6_months" />

            <RadioButton
                android:id="@+id/third"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_over_20k_followers_in_1_year" />
        </RadioGroup>


        <RadioGroup
            android:id="@+id/pageEngagementRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <RadioButton
                android:id="@+id/firstEngageRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_10_000_impressions_in_3_months" />

            <RadioButton
                android:id="@+id/secondEngageRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/over_25k_impressions_in_6_months" />

            <RadioButton
                android:id="@+id/thirdEngageRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/over_50k_impressions_in_1_year" />
        </RadioGroup>


    </LinearLayout>


</FrameLayout>